# file-sorter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  create_appimage.sh  create_appimage_modern.sh  create_cyclonedx_bom.sh  create_dmg.sh
.github/workflows/: build_release.yml  repo-create_doctoc_md.yml
docs/: atom_v1.1.0.json  cve-repost_macOS.html  cyclonedx_macos.json  depdiscover.json  sbom-cyclonedx_v1.1.0.json  sbom-cyclonedx_v1.2.0.json  sbom-cyclonedx_v1.2.0.json.sha256  sbom-cyclonedx_v1.2.1.json  sbom-cyclonedx_v1.2.1.json.sha256  sbom-spdx_v1.1.0.json  sbom-spdx_v1.2.0.json  sbom-spdx_v1.2.0.json.sha256  sbom-spdx_v1.2.1.spdx  sbom-spdx_v1.2.1.spdx.sha256
docs/architecture/: diagrams.md
include/: AboutDialog.hpp  FileSorter.hpp  MainWindow.hpp  rz_config.hpp
resources/: FileSorter.desktop  FileSorter_autostart.desktop  app_icon.icns
src/: AboutDialog.cpp  FileSorter.cpp  MainWindow.cpp  main.cpp
translations/: FileSorter_de.qm  FileSorter_de.ts
